<resources>
    <string name="app_name">Style me!</string>

    <string name="hello_world">Hello world!</string>
    <string name="afegir_roba">Afegir roba a l\'armari</string>
    <string name="armari">Armari</string>
    <string name="vestir">Vestir</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_armari">Armari</string>
    <string name="title_activity_add_clothes">AddClothes</string>
    <string name="title_activity_dress">Dress</string>
    <string name="desc">desc</string>
    <string name="fer_foto">Fer foto</string>
</resources>
